--- a/ssh_demo/web/index.html
+++ b/ssh_demo/web/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrapValidator.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/cat.ico">
     <link rel="stylesheet" type="text/css" href="css/index.css">
-	<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <!--顶部导航栏-->
@@ -136,11 +136,11 @@
     </div>
     <div id="footer"></div>
 
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery.js"></script>
     <script src="js/jquery.cookie.js"></script>
     <script src="js/bootstrapValidator.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script>
         $.get('htmls/top.html',function (data) {
             $('#top').html(data);
