--- a/ssh_demo/web/index.html
+++ b/ssh_demo/web/index.html
@@ -136,7 +136,7 @@
     </div>
     <div id="footer"></div>
 
-    <script src="js/jquery.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery.cookie.js"></script>
     <script src="js/bootstrapValidator.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
