--- a/ssh_demo/web/index.html
+++ b/ssh_demo/web/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrapValidator.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/cat.ico">
     <link rel="stylesheet" type="text/css" href="css/index.css">
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
 </head>
 <body>
     <!--顶部导航栏-->
@@ -140,7 +141,7 @@
     <script src="js/jquery.cookie.js"></script>
     <script src="js/bootstrapValidator.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script>
         $.get('htmls/top.html',function (data) {
             $('#top').html(data);
