--- a/ssh_demo/web/htmls/top.html
+++ b/ssh_demo/web/htmls/top.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="../css/top.css" rel="stylesheet">
+    <link href="./css/top.css" rel="stylesheet">
 </head>
 <body>
     <div class="navbar navbar-default navbar-fixed-top" id="header">
@@ -142,6 +142,6 @@
             </div>
         </div>
     </div>
-    <script src="../js/top.js"></script>
+    <script src="./js/top.js"></script>
 </body>
 </html>
