--- a/san/san-05.html
+++ b/san/san-05.html
@@ -36,10 +36,10 @@
 		input:disabled {
 		  background: #f7f7f7;
 		}
-		.success{
+		input[type="text"].success{
 		  border: 1px solid #9ACD32;
 		}
-		.error{
+		input[type="text"].error{
 		  border: 1px solid #f55;
 		}
 		input[type="text"] + span{
