--- a/IFE-css/htmls/css-04.html
+++ b/IFE-css/htmls/css-04.html
@@ -17,7 +17,7 @@
 			top: 0;
 			z-index: 2;
 			position: absolute;
-			transition: all 0.5s;
+			transition: all 0.8s ease-out;
 			backface-visibility:hidden;
 		}
 		.card:after{
@@ -29,7 +29,7 @@
 			width: 150px;
 			height: 200px;
 			z-index: 1;
-			transition: all 0.5s;
+			transition: all 0.8s ease-out;
 			transform: rotateY(0deg);
 		}
 		.card:hover:after{
