--- a/IFE-css/htmls/css-03.html
+++ b/IFE-css/htmls/css-03.html
@@ -225,7 +225,7 @@
 
     </style>
 </head>
-<body>
+<body ontouchstart>
     <div class="container">
         <!-- 脸 -->
         <div class="face">
