--- a/IFE-css/htmls/css-07.html
+++ b/IFE-css/htmls/css-07.html
@@ -126,7 +126,7 @@
 			</div>
 		</form>			
 	</div>
-	<script src="http://cdn.static.runoob.com/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="../js/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript">
 		$(function(){
 			/*获得输入框和提交按钮的控件*/
